# otherone-desktop

./: .gitignore  AGENTS.md
app/backend/: TODO.md
app/backend/core/: Cargo.toml
app/backend/core/src/: ai_test.rs  artifacts.rs  chat.rs  lib.rs  memory.rs  plugins.rs  session.rs  settings.rs  storage.rs  tools.rs  workflow.rs
app/backend/web/: Cargo.toml
app/backend/web/src/: main.rs
app/frontend/: .gitignore  TODO.md  index.html  package-lock.json  package.json  vite.config.ts
app/frontend/scripts/: run-tauri.cmd
app/frontend/src/: App.tsx  styles.css  vite-env.d.ts
app/frontend/src-tauri/: Cargo.toml  TODO.md  tauri.conf.json  自我介绍.pptx
app/frontend/src-tauri/capabilities/: default.json
app/frontend/src-tauri/src/: ai_runtime.rs  ai_test.rs  app_settings.rs  artifacts.rs  auth.rs  chat.rs  main.rs  memory.rs  native_dialog.rs  plugin_registry.rs  plugins.rs  session.rs  storage.rs  tools.rs  weixin_clawbot.rs  workflow.rs
app/frontend/src-tauri/tests/: stream_diagnostics.rs
app/frontend/src/components/: ArtifactsPanel.tsx  ConfirmDialog.tsx  CustomControls.tsx  EngineSettingsPanel.tsx  MemoryTreeScene.tsx  (+10 more)
docs/: API_MODEL_SETTINGS.md  AUTH.md  BACKEND.md  BACKEND_OTHERONE_AGENT.md  CHAT_STORAGE_AND_ENGINE_PLAN.md  DATABASE.md  DEFENSE_TECHNICAL_DESIGN.md  DESKTOP_APP_SHELL.md  FRONTEND.md  MCP_IMPORT.md  MEMORY.md  MESSAGE_PANEL.md  PROJECT.md  SESSION_STORAGE.md  SKILL_IMPORT.md  TAURI_EVENT_DEBUG.md  WEB_DESKTOP_PLATFORM_ARCHITECTURE.md  WEB_FULL_MIGRATION_PLAN.md  WEIXIN_CLAWBOT_CHANNEL.md  WORKFLOW_TASKS.md  WORKFLOW_TODO_AGENT_TOOLS.mmd  WORKFLOW_TODO_AI_CONFIG_REUSE.mmd  WORKFLOW_WEIXIN_TODO_REMINDERS.mmd
resources/propertypes/: chajian.html  changelog.html  changelog2.html  function-pannel.html  index.html  info-component.html  loading.html  login.html  markdown.html  messages.html  model-setting.html  offical.html  pricing.html  reply.html  scroll.html  stream.html
resources/tools/REPL/: USAGE.md  main.rs  实现.txt
resources/tools/bash/: ROADMAP.md  bash.rs  g002-security-verification-map.md  lib (1).rs  lib.rs  实现.txt
resources/tools/edit_file/: 实现.txt
resources/tools/glob_search/: 实现.txt
resources/tools/grep_search/: file_ops.rs  实现.txt
resources/tools/powershell/: 实现.txt
resources/tools/read_file/: compact_output.rs  实现.md
resources/tools/skill/: lib.rs  local-openai-compatible-providers.md  实现.txt
resources/tools/web_fetch/: PARITY.md  实现.txt
resources/tools/web_search/: 实现.txt
resources/tools/write_file/: 实现.md
(+27 files in other folders)
