[package]
name = "otherone_backend_core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
futures-util = "0.3"
glob = "0.3"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
otherone = "0.3.0"
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1.52.3", features = ["rt", "sync", "time"] }
walkdir = "2"
