[package]
name = "otherone_web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
otherone_backend_core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net", "sync", "fs"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tower-http = { version = "0.6.11", features = ["cors"] }
