[package]
name = "otherone_desktop"
version = "0.1.0"
description = "OtherOne desktop app"
authors = ["OtherOne"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = "0.4"
futures-util = "0.3"
glob = "0.3"
otherone = "0.3.0"
regex = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["time"] }
walkdir = "2"
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_UI_Shell",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
